Also fix max img width for markdown wrapped in basic-text component.

--- a/src/app/components/text/basic-text/basic-text.component.scss
+++ b/src/app/components/text/basic-text/basic-text.component.scss
@@ -143,3 +143,7 @@
 .maximum-10-lines-ellipsis {
   @include truncate-owerflowing-text-multiline($line-height: $text-line-height, $lines-to-show: 10);
 }
+
+img {
+  max-width: 100% !important;
+}
